WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131594
Subpixel rendering: WK1: Wrong repaint rect is calculated when layer has non-compositing transform.
https://bugs.webkit.org/show_bug.cgi?id=131594
Summary
Subpixel rendering: WK1: Wrong repaint rect is calculated when layer has non-...
alan
Reported
2014-04-13 12:35:35 PDT
RenderBox::computeRectForRepaint integral snaps when layer has transform.
Attachments
Test reduction
(1.38 KB, text/html)
2014-04-13 16:12 PDT
,
alan
no flags
Details
Patch
(64.96 KB, patch)
2014-04-18 21:46 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion
(618.72 KB, application/zip)
2014-04-18 22:27 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(564.65 KB, application/zip)
2014-04-19 01:44 PDT
,
Build Bot
no flags
Details
Patch
(65.89 KB, patch)
2014-04-19 08:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-04-13 16:12:54 PDT
Created
attachment 229246
[details]
Test reduction
alan
Comment 2
2014-04-18 21:46:45 PDT
Created
attachment 229715
[details]
Patch
Build Bot
Comment 3
2014-04-18 22:27:03 PDT
Comment on
attachment 229715
[details]
Patch
Attachment 229715
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/4669889453228032
New failing tests: fast/repaint/hidpi-wrong-repaint-rect-when-parent-has-noncompositing-transform.html
Build Bot
Comment 4
2014-04-18 22:27:06 PDT
Created
attachment 229720
[details]
Archive of layout-test-results from webkit-ews-04 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-04 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 5
2014-04-19 01:44:56 PDT
Comment on
attachment 229715
[details]
Patch
Attachment 229715
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6003313053007872
New failing tests: fast/repaint/hidpi-wrong-repaint-rect-when-parent-has-noncompositing-transform.html
Build Bot
Comment 6
2014-04-19 01:44:59 PDT
Created
attachment 229729
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 7
2014-04-19 08:54:03 PDT
Created
attachment 229734
[details]
Patch
alan
Comment 8
2014-04-19 08:54:23 PDT
Comment on
attachment 229734
[details]
Patch EWSing.
WebKit Commit Bot
Comment 9
2014-04-19 10:48:35 PDT
Comment on
attachment 229734
[details]
Patch Clearing flags on attachment: 229734 Committed
r167538
: <
http://trac.webkit.org/changeset/167538
>
WebKit Commit Bot
Comment 10
2014-04-19 10:48:39 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 11
2014-04-19 12:16:49 PDT
This is causing a test to fail:
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/r167540%20(5326)/results.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug