https://bugs.webkit.org/show_bug.cgi?id=131594 Subpixel rendering: WK1: Wrong repaint rect is calculated when layer has non-compositing transform.

Reviewed by Simon Fraser.

We need to snap the repaint rect for transformed object the same way when we paint them.

Test: fast/repaint/hidpi-wrong-repaint-rect-when-parent-has-noncompositing-transform.html

Source/WebCore:
* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeRectForRepaint):

LayoutTests:
* fast/repaint/hidpi-wrong-repaint-rect-when-parent-has-noncompositing-transform-expected.txt: Added.
* fast/repaint/hidpi-wrong-repaint-rect-when-parent-has-noncompositing-transform.html: Added.


Canonical link: https://commits.webkit.org/149958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167538 268f45cc-cd09-0410-ab3c-d52691b4dbfc